[gd_scene load_steps=6 format=3 uid="uid://bknxvxmgfwdp5"]

[ext_resource type="Texture2D" uid="uid://wmp1nwo667g3" path="res://background.png" id="1_7fvvs"]
[ext_resource type="Script" uid="uid://db0hoikwp1hjp" path="res://scenes/main_screen.gd" id="1_w87pm"]
[ext_resource type="Texture2D" uid="uid://dmtuyfqvjv3mg" path="res://Assets/Boy/Main screen.png" id="2_kusfh"]
[ext_resource type="Texture2D" uid="uid://cag5oxy2xt4ab" path="res://Assets/Main screen/Alter Me Logo.png" id="3_lushf"]
[ext_resource type="Theme" uid="uid://du48cwjo5bknu" path="res://Themes/Red.tres" id="4_w87pm"]

[node name="Main screen" type="Node2D"]
script = ExtResource("1_w87pm")

[node name="Background" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Background"]
position = Vector2(270, 480)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_7fvvs")

[node name="Boy" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Boy"]
position = Vector2(270, 480)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_kusfh")

[node name="Node2D" type="Node2D" parent="."]

[node name="AlterMeLogo" type="Sprite2D" parent="."]
position = Vector2(255, 141)
scale = Vector2(0.844, 0.844)
texture = ExtResource("3_lushf")

[node name="Label" type="Label" parent="."]
offset_left = 191.0
offset_top = 10.0
offset_right = 322.0
offset_bottom = 42.0
theme = ExtResource("4_w87pm")
text = "Welcome to"

[node name="Name" type="Label" parent="Label"]
offset_top = 226.0
offset_right = 131.0
offset_bottom = 258.0
theme = ExtResource("4_w87pm")
text = "John"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Label"]
offset_left = -30.0
offset_top = 281.0
offset_right = 168.0
offset_bottom = 721.0

[node name="MarginContainer" type="MarginContainer" parent="Label/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Talk" type="Button" parent="Label/VBoxContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("4_w87pm")
text = "Talk"

[node name="MarginContainer5" type="MarginContainer" parent="Label/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="To Do" type="Button" parent="Label/VBoxContainer/MarginContainer5"]
layout_mode = 2
theme = ExtResource("4_w87pm")
text = "To - Do"

[node name="MarginContainer2" type="MarginContainer" parent="Label/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Alters" type="Button" parent="Label/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme = ExtResource("4_w87pm")
text = "Alters"

[node name="MarginContainer3" type="MarginContainer" parent="Label/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Info" type="Button" parent="Label/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme = ExtResource("4_w87pm")
text = "Info"

[node name="MarginContainer4" type="MarginContainer" parent="Label/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Timeline" type="Button" parent="Label/VBoxContainer/MarginContainer4"]
layout_mode = 2
theme = ExtResource("4_w87pm")
text = "Timeline"

[connection signal="pressed" from="Label/VBoxContainer/MarginContainer/Talk" to="." method="_on_talk_pressed"]
[connection signal="pressed" from="Label/VBoxContainer/MarginContainer5/To Do" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Label/VBoxContainer/MarginContainer2/Alters" to="." method="_on_alters_pressed"]
[connection signal="pressed" from="Label/VBoxContainer/MarginContainer3/Info" to="." method="_on_info_pressed"]
[connection signal="pressed" from="Label/VBoxContainer/MarginContainer4/Timeline" to="." method="_on_timeline_pressed"]
